fixed nonvisible redirect links

--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@
     {
         font-size: 1vw;
         width: 100%;
-        text-align: ce;
+        text-align: center;
     }
 
     /*Buttons*/
@@ -146,7 +146,7 @@
     flex-direction: column;
     align-items: center;
     max-width: 70vw;
-    min-height: 70vh;
+    min-height: 50vh;
     background-color: rgba(179, 173, 169, 1);
     border: 5px solid black;
     text-align: center;
